[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/Balls/ball.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Standard_Ball.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Aim_Area.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/Balls/rocket_bottom.png" type="Texture" id=4]
[ext_resource path="res://Textures/Balls/rocket_top.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Ball_Controller.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Rocket_Ball.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Ball" type="Area2D"]
gravity = 0.0
script = ExtResource( 6 )

[node name="aim_area" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="UI_Container" type="Node2D" parent="."]

[node name="rocket_ui" type="Node2D" parent="UI_Container"]
visible = false
script = ExtResource( 7 )

[node name="rocket_top" type="TextureRect" parent="UI_Container/rocket_ui"]
margin_left = 12.0
margin_top = -8.0
margin_right = 44.0
margin_bottom = 16.0
rect_rotation = 90.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rocket_bottom" type="TextureRect" parent="UI_Container/rocket_ui"]
margin_top = -8.0
margin_right = 32.0
margin_bottom = 16.0
rect_rotation = 90.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="standard_ui" type="Node2D" parent="UI_Container"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="UI_Container/standard_ui"]
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Ball_area_entered"]
